frontend/test/should_fail/annot_006.grg
rule r {
	:Node [prio=42];

	modify {}
}
